M  src/main/java/org/gronia/items/SuperHoe.java A  src/main/java/org/gronia/menu/CustomPageMenu.java A  src/main/java/org/gronia/menu/StorageMenu.java R  src/main/java/org/gronia/menu/iterator/StorageAllIterator.java -> src/main/java/org/gronia/menu/iterator/StorageIterator.java M  src/main/java/org/gronia/plugin/ItemRegistry.java M  src/main/java/org/gronia/plugin/storage/StoragePlugin.java